--- a/templates/header.twig
+++ b/templates/header.twig
@@ -24,7 +24,7 @@
 
                     {% if user.idUserGroup == 1 %}
                         <a class="navbar-form navbar-left ng-pristine ng-valid"
-                           href="{#<?php echo $_SERVER["PHP_SELF"] . "?page=category_list"; ?>#}">
+                           href="{{ router.generateURL('Category', 'getAdminCategory') }}">
                             Back-Office
                         </a>
                     {% endif %}
