--- a/templates/category.twig
+++ b/templates/category.twig
@@ -49,7 +49,7 @@
 
 <body class="section-index ltr">
 
-{% include '../templates_partials/header.twig' %}
+{% include 'header.twig' %}
 
 <div class="container" id="content-wrapper">
     {% block body %}
