--- a/templates/header.twig
+++ b/templates/header.twig
@@ -58,6 +58,37 @@
                         </div>
                     </div>
                 {% endfor %}
+
+                <div class="btn-group">
+                    <div class="btn-group dropright">
+                        <a type="button" class="btn btn-secondary"
+                           href="">
+                            {% trans "Idioma" %}
+                        </a>
+                        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropright</span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="">
+                                    Español
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Catalan
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Ingles
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
 
         </div>
