--- a/templates/header.twig
+++ b/templates/header.twig
@@ -7,7 +7,7 @@
 
                 {% if not session.user %}
                     <a class="btn navbar-form navbar-left ng-pristine ng-valid"
-                       href="<{{ router.generateURL('User', 'login') }}">
+                       href="{{ router.generateURL('User', 'login') }}">
                         <i class="fa fa-user"></i>
                         {% trans "Iniciar Sesión" %}
                     </a>
