--- a/templates/category.twig
+++ b/templates/category.twig
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./theme/images/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <title>{% block title %}Foro Programacion &bull; - Categoria{% endblock %}</title>
+    <title>{% block title %}Foro Programacion • Categoria{% endblock %}</title>
 
     <link href="./theme/comboot/comboot.css" rel="stylesheet"/>
     <link href="./theme/comboot/font-awesome.min.css" rel="stylesheet"/>
