--- a/templates/header.twig
+++ b/templates/header.twig
@@ -33,6 +33,7 @@
 
                     <a class="btn navbar-form navbar-left ng-pristine ng-valid" href="{{ router.generateURL('User', 'logout') }}">
                         <i class="fas fa-power-off"></i>
+                        {% trans "Cerrar Sesión" %}
                     </a>
                 {% endif %}
 
