--- a/templates/header.twig
+++ b/templates/header.twig
@@ -65,9 +65,9 @@
                         {% trans "Idioma" %}
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="?lang=es">Español</a>
-                        <a class="dropdown-item" href="?lang=va">Catalan</a>
-                        <a class="dropdown-item" href="?lang=gb">Ingles</a>
+                        <a class="dropdown-item" href="?lang=es">{% trans "Español" %}</a>
+                        <a class="dropdown-item" href="?lang=va">{% trans "Catalán" %}</a>
+                        <a class="dropdown-item" href="?lang=gb">{% trans "Inglés" %}</a>
                     </div>
                 </div>
 
