--- a/templates/header.twig
+++ b/templates/header.twig
@@ -65,9 +65,9 @@
                         {% trans "Idioma" %}
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{{ router.generateURL('Language', 'changeLanguage', {}, {"lang":"es", "url":url}) }}">Español</a>
-                        <a class="dropdown-item" href="{{ router.generateURL('Language', 'changeLanguage', {}, {"lang":"ca", "url":url}) }}">Catalan</a>
-                        <a class="dropdown-item" href="{{ router.generateURL('Language', 'changeLanguage', {}, {"lang":"en", "url":url}) }}">Ingles</a>
+                        <a class="dropdown-item" href="?lang=es">Español</a>
+                        <a class="dropdown-item" href="?lang=va">Catalan</a>
+                        <a class="dropdown-item" href="?lang=gb">Ingles</a>
                     </div>
                 </div>
 
