--- a/templates/category/show.category.twig
+++ b/templates/category/show.category.twig
@@ -3,6 +3,10 @@
     {{ title }}
 {% endblock %}
 {% block body %}
+    <div class="page-header">
+        <h2>{{ category.title }}</h2>
+    </div>
+
     {% for forum in category.forums %}
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
