--- a/templates/topic/show.topic.twig
+++ b/templates/topic/show.topic.twig
@@ -1,54 +1,154 @@
-{% extends "category/category.twig" %}
+{% extends "topic/topic.twig" %}
 {% block title %}
     {{ title }}
 {% endblock %}
 {% block body %}
-    <div class="page-header">
-        <h2>{{ category.title }}</h2>
+
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <h4>{{ topic.title }}</h4>
+            <p>{{ topic.description }}</p>
+        </div>
     </div>
 
-    {% for forum in category.forums %}
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead class="topiclist">
-                <tr>
-                    <th class="forum-name"><i class="fa fa-folder-open"></i>Forum</th>
-                    <th class="topics"><i class="fa fa-comments-o"></i>Topics</th>
-                    <th class="posts"><i class="fa fa-pencil-square-o"></i>Posts</th>
-                    <th class="lastpost"><i class="fa fa-history"></i> <span> Last post</span></th>
-                </tr>
-                </thead>
-                <tbody class="topiclist forums">
 
-                <tr>
-                    <td class="forum-name" title="No unread posts">
-						<span class="pull-left forum-icon">
-							<a href="{{ router.generateURL('Forum', 'getForum', {id_category: category.idCategory, id_forum: forum.idForum}) }}"
-                               class="btn btn-lg btn-default tooltip-link" title="No unread posts">
-                                <div class="">
-                                    <img width="32" height="32" src="{{ target_dir }}{{ forum.image }}">
-                                </div>
-							</a>
-						</span>
-                        <div class="forum-icon-mobile">
+    <div class="row mobile-fix">
 
-                            <i class="fa fa-folder fa-fw"></i>
+        <div class="col-md-3 text-center col-xs-12">
+            {% if user %}
+                <input type="submit" class="btn btn-primary" name="seguir" value="Seguir Topic">
+            {% endif %}
 
-                        </div>
-                        <a href="{{ router.generateURL('Forum', 'getForum', {id_category: category.idCategory, id_forum: forum.idForum}) }}"
-                           class="forumtitle">{{ forum.title }}</a><br/>
-                        <small>{{ forum.description }}</small>
-
-                    </td>
-                    <td><span class="badge">No esta implementado</span></td>
-                    <td><span class="badge">No esta implementado</span></td>
-                    <td><span class="badge">No esta implementado</span></td>
-
-                </tr>
-
-                </tbody>
-            </table>
         </div>
-    {% endfor %}
+        <div class="col-md-6 text-center col-xs-12">
+            <div class="btn-group forum-pagination">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {% if Previous > 0 %}
+                        <li>
+                            <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: Previous}) }}"
+                            aria-label="Previous">
+                            <span aria-hidden="true">&laquo; Previous</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        <?php for ($i = 1; $i <= $pages; $i++) : ?>
+                        <li>
+                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $i]); ?>"><?= $i; ?></a>
+                        </li>
+                        <?php endfor; ?>
+                        {% if Next <= pages %}
+                        <li>
+                            <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: Next}) }}"
+                            aria-label="Next">
+                            <span aria-hidden="true">Next &raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </div>
+
+{#
+    <?php
+    foreach ($posts as $post) {
+        ?>
+    <div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title first pull-left"><?php echo $post->getTitle(); ?></h3>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="panel-body no-padding ">
+                <div class="row no-margin">
+                    <div class="col-md-3 col-xs-12 post-info post-info-left">
+                        <dl id="profile108" class="no-margin-xs">
+                            <dt class="avatar text-center rounded">
+                                <img width="100" height="100"
+                                     src="<?php echo $target_dir . $post->getUser()->getAvatar(); ?> " alt="avatar">
+                            </dt>
+                            <dd class="text-center">
+                                <a href="<?= $route->generateURL('Forum', 'getForumUser', ['id_user' => $post->getIdUser()]); ?>">
+                                    <?php echo $post->getUser()->getUsername(); ?>
+                                </a>
+                            </dd>
+
+                        </dl>
+                        <dl class="hidden-xs">
+                            <dt>
+                                <hr/>
+                            </dt>
+                            <!--<dd><strong>Posts:</strong> 88</dd>-->
+                            <dd>
+                                <strong>Joined:</strong> <?php echo $post->getUser()->getDateAdd()->format("Y-m-d H:i"); ?>
+                            </dd>
+                        </dl>
+                    </div>
+
+                    <div class="col-md-9 col-xs-12 post-content post-content-right">
+
+                        <div class="row post-head hidden-xs no-margin-bottom">
+                            <div class="col-md-6 col-xs-6 author">
+                                by <strong><a
+                                            href="<?= $route->generateURL('Forum', 'getForumUser', ['id_user' => $post->getIdUser()]); ?>">
+                                        <?php echo $post->getUser()->getUsername(); ?></a></strong> &raquo;
+                                <?php echo $post->getDateAdd()->format("Y-m-d H:i"); ?>
+                            </div>
+                            <div class="col-md-6 col-xs-6 no-padding">
+
+                            </div>
+                        </div>
+                        <div class="content">
+                            <?php echo $post->getText(); ?>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <?php } ?>
+
+
+    <div class="row mobile-fix">
+
+        <div class="col-md-3"></div>
+        <div class="col-md-6 text-center col-xs-12">
+            <div class="btn-group forum-pagination">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <?php
+                        if ($Previous > 0) {
+                        ?>
+                        <li>
+                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $Previous]); ?>"
+                            aria-label="Previous">
+                            <span aria-hidden="true">&laquo; Previous</span>
+                            </a>
+                        </li>
+                        <?php } ?>
+                        <?php for ($i = 1; $i <= $pages; $i++) : ?>
+                        <li>
+                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $i]); ?>"><?= $i; ?></a>
+                        </li>
+                        <?php endfor; ?>
+                        <?php
+                        if ($Next <= $pages) {
+                            ?>
+                        <li>
+                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $Next]); ?>"
+                            aria-label="Next">
+                            <span aria-hidden="true">Next &raquo;</span>
+                            </a>
+                        </li>
+                        <?php } ?>
+                    </ul>
+                </nav>
+            </div>
+        </div>#}
 
 {% endblock %}
