--- a/templates/topic/show.topic.twig
+++ b/templates/topic/show.topic.twig
@@ -32,11 +32,13 @@
                             </a>
                         </li>
                         {% endif %}
-                        <?php for ($i = 1; $i <= $pages; $i++) : ?>
+                        {% for i in 1..pages %}
+{#                        <?php for ($i = 1; $i <= $pages; $i++) : ?>#}
                         <li>
-                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $i]); ?>"><?= $i; ?></a>
+                            <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: i}) }}">{{ i }}</a>
                         </li>
-                        <?php endfor; ?>
+                        {% endfor %}
+
                         {% if Next <= pages %}
                         <li>
                             <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: Next}) }}"
@@ -52,14 +54,11 @@
 
     </div>
 
-{#
-    <?php
-    foreach ($posts as $post) {
-        ?>
+    {% for post in posts %}
     <div>
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title first pull-left"><?php echo $post->getTitle(); ?></h3>
+                <h3 class="panel-title first pull-left">{{ post.title }}</h3>
 
                 <div class="clearfix"></div>
             </div>
@@ -69,11 +68,11 @@
                         <dl id="profile108" class="no-margin-xs">
                             <dt class="avatar text-center rounded">
                                 <img width="100" height="100"
-                                     src="<?php echo $target_dir . $post->getUser()->getAvatar(); ?> " alt="avatar">
+                                     src="{{ target_dir }}{{ post.user.avatar }}" alt="avatar">
                             </dt>
                             <dd class="text-center">
-                                <a href="<?= $route->generateURL('Forum', 'getForumUser', ['id_user' => $post->getIdUser()]); ?>">
-                                    <?php echo $post->getUser()->getUsername(); ?>
+                                <a href="{{ router.generateURL('Forum', 'getForumUser', {id_user: post.idUser}) }}">
+                                    {{ post.user.username }}
                                 </a>
                             </dd>
 
@@ -84,7 +83,7 @@
                             </dt>
                             <!--<dd><strong>Posts:</strong> 88</dd>-->
                             <dd>
-                                <strong>Joined:</strong> <?php echo $post->getUser()->getDateAdd()->format("Y-m-d H:i"); ?>
+                                <strong>Joined:</strong> {{ post.user.dateAdd|date("Y-m-d H:i") }}
                             </dd>
                         </dl>
                     </div>
@@ -93,17 +92,16 @@
 
                         <div class="row post-head hidden-xs no-margin-bottom">
                             <div class="col-md-6 col-xs-6 author">
-                                by <strong><a
-                                            href="<?= $route->generateURL('Forum', 'getForumUser', ['id_user' => $post->getIdUser()]); ?>">
-                                        <?php echo $post->getUser()->getUsername(); ?></a></strong> &raquo;
-                                <?php echo $post->getDateAdd()->format("Y-m-d H:i"); ?>
+                                by <strong><a href="{{ router.generateURL('Forum', 'getForumUser', {id_user: post.idUser}) }}">
+                                        {{ post.user.username }}</a></strong> &raquo;
+                                {{ post.dateAdd|date("Y-m-d H:i") }}
                             </div>
                             <div class="col-md-6 col-xs-6 no-padding">
 
                             </div>
                         </div>
                         <div class="content">
-                            <?php echo $post->getText(); ?>
+                            {{ post.text }}
                         </div>
 
                     </div>
@@ -111,7 +109,7 @@
             </div>
         </div>
     </div>
-    <?php } ?>
+    {% endfor %}
 
 
     <div class="row mobile-fix">
@@ -121,34 +119,31 @@
             <div class="btn-group forum-pagination">
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
-                        <?php
-                        if ($Previous > 0) {
-                        ?>
-                        <li>
-                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $Previous]); ?>"
-                            aria-label="Previous">
-                            <span aria-hidden="true">&laquo; Previous</span>
-                            </a>
-                        </li>
-                        <?php } ?>
-                        <?php for ($i = 1; $i <= $pages; $i++) : ?>
-                        <li>
-                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $i]); ?>"><?= $i; ?></a>
-                        </li>
-                        <?php endfor; ?>
-                        <?php
-                        if ($Next <= $pages) {
-                            ?>
-                        <li>
-                            <a href="<?= $route->generateURL('Topic', 'getTopic', ['id_category' => $forum->getIdCategory(), 'id_forum' => $forum->getIdForum(), 'id_topic' => $topic->getIdTopic()], ["num_page" => $Next]); ?>"
-                            aria-label="Next">
-                            <span aria-hidden="true">Next &raquo;</span>
-                            </a>
-                        </li>
-                        <?php } ?>
+                        {% if Previous > 0 %}
+                            <li>
+                                <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: Previous}) }}"
+                                   aria-label="Previous">
+                                    <span aria-hidden="true">&laquo; Previous</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                        {% for i in 1..pages %}
+                            <li>
+                                <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: i}) }}">{{ i }}</a>
+                            </li>
+                        {% endfor %}
+
+                        {% if Next <= pages %}
+                            <li>
+                                <a href="{{ router.generateURL('Topic', 'getTopic', {id_category: forum.idCategory, id_forum: forum.idForum, id_topic: topic.idTopic}, {num_page: Next}) }}"
+                                   aria-label="Next">
+                                    <span aria-hidden="true">Next &raquo;</span>
+                                </a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </nav>
             </div>
-        </div>#}
+        </div>
 
 {% endblock %}
