--- a/templates/topic/topic.twig
+++ b/templates/topic/topic.twig
@@ -12,29 +12,29 @@
 
     <title>{% block title %}Foro Programacion • Topic{% endblock %}</title>
 
-    <link href="./theme/comboot/comboot.css" rel="stylesheet"/>
-    <link href="./theme/comboot/font-awesome.min.css" rel="stylesheet"/>
-    <link href="./theme/comboot/colorpicker.min.css" rel="stylesheet"/>
-    <link href="./theme/comboot/lightbox.css" rel="stylesheet"/>
-    <link href="./theme/comboot/select.min.css" rel="stylesheet"/>
-    <link href="./theme/comboot/syntax-highlighting.css" rel="stylesheet"/>
-    <link href="./theme/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./theme/bootstrap.min.css" rel="stylesheet">
+    <link href="./../../theme/comboot/comboot.css" rel="stylesheet"/>
+    <link href="./../../theme/comboot/font-awesome.min.css" rel="stylesheet"/>
+    <link href="./../../theme/comboot/colorpicker.min.css" rel="stylesheet"/>
+    <link href="./../../theme/comboot/lightbox.css" rel="stylesheet"/>
+    <link href="./../../theme/comboot/select.min.css" rel="stylesheet"/>
+    <link href="./../../theme/comboot/syntax-highlighting.css" rel="stylesheet"/>
+    <link href="./../../theme/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./../../theme/bootstrap.min.css" rel="stylesheet">
 
-    <script src="./theme/comboot/jquery.min.js" type="text/javascript"></script>
-    <script src="./theme/editor.js" type="text/javascript"></script>
-    <script src="./theme/comboot/angular.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/progressbar.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/bootstrap.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/colorpicker.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/lightbox.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/select.min.js" type="text/javascript"></script>
-    <script src="./theme/comboot/syntax-highlighting.js" type="text/javascript"></script>
-    <script src="./theme/comboot/comboot.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/jquery.min.js" type="text/javascript"></script>
+    <script src="./../../theme/editor.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/angular.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/progressbar.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/colorpicker.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/lightbox.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/select.min.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/syntax-highlighting.js" type="text/javascript"></script>
+    <script src="./../../theme/comboot/comboot.js" type="text/javascript"></script>
 
 
-    <link href="./theme/fontawesome/css/all.min.css" rel="stylesheet"/>
-    <script src="./theme/fontawesome/js/all.min.js" type="text/javascript"></script>
+    <link href="./../../theme/fontawesome/css/all.min.css" rel="stylesheet"/>
+    <script src="./../../theme/fontawesome/js/all.min.js" type="text/javascript"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
