Projecte pasar a twig.

--- a/templates/front-office/category/show.category.twig
+++ b/templates/front-office/category/show.category.twig
@@ -1,4 +1,4 @@
-{% extends "category/category.twig" %}
+{% extends "front-office/category/category.twig" %}
 {% block title %}
     {{ title }}
 {% endblock %}
