--- a/templates/front-office/index/show.index.twig
+++ b/templates/front-office/index/show.index.twig
@@ -1,4 +1,4 @@
-{% extends "category/category.twig" %}
+{% extends "front-office/category/category.twig" %}
 {% block title %}
     {{ title }}
 {% endblock %}
