--- a/templates/front-office/forum/show.forum.twig
+++ b/templates/front-office/forum/show.forum.twig
@@ -55,13 +55,13 @@
                         {% for i in 1..pages %}
                         {% if id_forum != 0 %}
                         <li>
-                            <a href="{{ router.generateURL('Forum', 'getForum', {id_category: forum.idCategory, id_forum: forum.idForum}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}"><?= $i; ?></a>
+                            <a href="{{ router.generateURL('Forum', 'getForum', {id_category: forum.idCategory, id_forum: forum.idForum}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}">{{ i }}</a>
                         </li>
                         {% endif %}
                         {% if id_user != 0 %}
                         <li>
                             <a href="{{ router.generateURL('Forum', 'getForumUser', {id_user: id_user}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}"
-                            aria-label="Previous"><?= $i; ?></a>
+                            aria-label="Previous">{{ i }}</a>
                         </li>
                         {% endif %}
                         {% endfor %}
@@ -151,7 +151,6 @@
             </thead>
             <tbody class="topiclist topics">
 
-            {{ dump(topics) }}
             {% for topic in topics %}
             <tr class="t-row">
                 <td class="topic-name " title="No unread posts">
@@ -249,13 +248,16 @@
                         {% for i in 1..pages %}
                             {% if id_forum != 0 %}
                                 <li>
-                                    <a href="{{ router.generateURL('Forum', 'getForum', {id_category: forum.idCategory, id_forum: forum.idForum}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}"><?= $i; ?></a>
+                                    <a href="{{ router.generateURL('Forum', 'getForum', {id_category: forum.idCategory, id_forum: forum.idForum}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}">
+                                        {{ i }}
+                                    </a>
                                 </li>
                             {% endif %}
                             {% if id_user != 0 %}
                                 <li>
                                     <a href="{{ router.generateURL('Forum', 'getForumUser', {id_user: id_user}, {page: i, search_keywords: search, dateIni: dateIni, dateFin: dateFin}) }}"
-                                       aria-label="Previous"><?= $i; ?></a>
+                                       aria-label="Previous">{{ i }}
+                                    </a>
                                 </li>
                             {% endif %}
                         {% endfor %}
